Fixed styling to avoid image spillage over container

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -17,10 +17,19 @@ body{
 .header > h3{
     font-size: 2rem
 }
-.item-img, .cart-img{
+
+.item-img{
     object-fit: contain;
     object-position: center;
-    height: 15vw;
+    height: 50%;
+    width: 100%;
+}
+
+.cart-img{
+    object-fit: contain;
+    object-position: center;
+    max-height: 19vh;
+    height: 100%;
     width: 100%;
 }
 
